fix: z-index for moving tank

--- a/05_markup/project/style/article.css
+++ b/05_markup/project/style/article.css
@@ -19,7 +19,7 @@
         height: 0;
         min-height: 0;
         overflow: hidden;
-
+        z-index: 1;
         /*** transition ***/
         transition: opacity var(--animation-bg) ease var(--animation-bg);
     }
@@ -123,7 +123,7 @@
         position: absolute;
         right: 0;
         bottom: -22vh;
-        z-index: 3;
+        z-index: 6;
     }
 }
 
@@ -149,7 +149,7 @@
     .article_text {
         column-count: 2;
         position: relative;
-        z-index: 2;
+        z-index: 1;
     }
 }
 
@@ -165,6 +165,6 @@
     }
     .toggle .parallax-ultra-fore {
         transform: translateZ(40px) scale(.87);
-        z-index: 4;
+        z-index: 1;
     }
 }
